# Django_Project

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  etc-template.md  feature_request.md
Django-Project/: docker-compose-local.yml  docker-compose_prod.yml
Django-Project/config/: settings.py  urls.py
Django-Project/config/settings/: base.py
Django_Project/: docker-compose.yml  docker-compose_prod.yml  manage.py  pyproject.toml
Django_Project/account/: admin.py  apis.py  models.py  serializers.py  urls.py
Django_Project/account/migrations/: 0001_initial.py  0002_initial.py
Django_Project/account_history/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
Django_Project/account_history/migrations/: 0001_initial.py  0002_initial.py
Django_Project/config/: wsgi.py
Django_Project/config/settings/: base.py  local.py  prod.py
Django_Project/config/urls/: urls_dev.py  urls_prod.py
Django_Project/user/: admin.py  models.py  serializers.py  urls.py  views.py
Django_Project/user/migrations/: 0001_initial.py
